# djinit

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  requirements.txt  ruff.toml  setup.py  single_output.txt  standard_output.txt  unified_output.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  pre-commit.yml  publish.yml  release.yml
djinit/: cli.py  generator.py  utils.py
djinit/commands/: app.py  handler.py  secret.py
djinit/core/: parser.py  types.py
djinit/scripts/: app_generator.py  cicd_config_generator.py  command_handler.py  console_ui.py  django_helper.py  files.py  input_handler.py  name_validator.py  project.py
djinit/services/: app.py  files.py  project.py  templates.py
djinit/templates/: app_urls.j2  gitignore.j2  project_urls.j2  readme.j2  requirements.j2  wsgi.j2
djinit/templates/app/: apps.j2  routes.j2
djinit/templates/components/: api_readme.md-tpl  apps.py-tpl  routes.py-tpl
djinit/templates/config/: asgi.j2  urls.py-tpl  wsgi.j2  wsgi.py-tpl
djinit/templates/config/settings/: base.j2  base.py-tpl  (+3 more)
djinit/templates/custom/: project_urls_api.j2
djinit/templates/project/: asgi.j2  env_sample-tpl  env_sample.j2  justfile-tpl  justfile.j2  manage.py-tpl  manage_py.j2  procfile-tpl  readme.j2  readme.md-tpl  requirements-tpl  requirements.j2  runtime_txt-tpl  settings_base.j2  settings_production.j2  urls.j2  urls_with_api.j2  wsgi.j2
djinit/templates/shared/: env_sample.j2  readme.j2  requirements.j2
djinit/ui/: console.py  input.py
djinit/utils/: common.py  django.py  exceptions.py  secretkey.py  security.py
examples/: bug_check.py  full_test.py  generate_projects.py  test_all.py  test_all_structures.py  test_pytest.py  test_vue.py
src/: cli.py  generator.py  utils.py
src/djinit/: cli.py  generator.py
src/djinit/core/: base.py  config.py  parser.py  types.py
src/djinit/creators/: app.py  files.py  project.py  setup.py
src/djinit/scripts/: app_generator.py  deployment_files_generator.py  files.py  settings.py
src/djinit/templater/: __init__.py  base.py
src/djinit/templates/: gitlab_ci.j2  justfile.j2  settings_development.j2
src/djinit/ui/: input.py
src/djinit/utils/: common.py  django.py
src/scripts/: app_generator.py  cicd_config_generator.py  command_handler.py  console_ui.py  deployment_files_generator.py  files.py  input_handler.py  name_validator.py  project.py  secretkey_generator.py  settings.py  template_engine.py
src/templates/: env_sample.j2  files.py  github_actions_ci.j2  project.py  pyproject_toml.j2  readme.j2  requirements.j2  routes.j2  serializers.j2  settings.py  settings_production.j2
yoo/: .env.sample  Procfile  README.md  justfile  manage.py  pyproject.toml  requirements.txt
yoo/apps/api/: apps.py
yoo/apps/core/: apps.py
yoo/apps/store/: routes.py  serializers.py  urls.py
yoo/core/: asgi.py  urls.py
yoo/core/settings/: base.py  development.py  production.py
(+69 files in other folders)
