[project]
name = "djinit"
version = "0.1.0"
description = "A CLI tool to setup Django project"
readme = "README.md"
requires-python = ">=3.13"
authors = [
{ name = "Sankalp Tharu", email = "sankalptharu50028@gmail.com" }
]
license = { text = "MIT" }
classifiers=[
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Framework :: Django :: 4.2",
        "Framework :: Django :: 5.1",
        "Framework :: Django :: 5.2",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Code Generators",
    ],
dependencies = [
    "click>=8.3.0",
    "rich>=14.2.0",
    "ruff>=0.14.2",
]

[project.url]
Homepage = "https://github.com/S4NKALP/djinit"

# [porject.scripts]
# djinit = "src.generator:main"
